# titanic-data-analysis

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  IMPROVEMENT_PLAN.md  LICENSE  Makefile  README.md  REPORT.md  ROADMAP.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  pages.yml
dashboard/: README.md  generate.py  generate_pdf.py  index.html
docs/: DATA.md  DEVELOPMENT.md  DISCOVERABILITY.md  METHODOLOGY.md
notebooks/: 01_exploratory_analysis.ipynb
reports/: README.md  Titanic_Survival_Analyst_Report.docx  build_analyst_report.py  validate_dataset.py
scripts/: download_data.py  run_eda.py
src/: __init__.py  config.py
src/analysis/: __init__.py  eda.py  inference.py  statistics.py
src/data/: __init__.py  loader.py  processing.py
src/visualization/: __init__.py  plots.py
tests/: conftest.py  test_eda.py  test_loader.py  test_processing.py  test_statistics.py
