[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "titanic-eda"
version = "0.2.0"
description = "Titanic survival analysis: reproducible EDA of the titanic5 dataset (1,309 passengers) with 95% Wilson confidence intervals, odds ratios, chi-square tests, Cramer's V, and Cohen's d — plus an interactive Chart.js dashboard, a stakeholder analyst report (DOCX + PDF), and a fully-tested reusable Python package for EDA, statistical inference, and visualisation."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Aneek Hait", email = "noreply@aneekhait.github.io" }]
keywords = [
    "titanic",
    "titanic-dataset",
    "titanic-survival",
    "eda",
    "exploratory-data-analysis",
    "data-analysis",
    "data-science",
    "statistics",
    "statistical-inference",
    "odds-ratio",
    "chi-square",
    "confidence-interval",
    "effect-size",
    "cramers-v",
    "cohens-d",
    "wilson-interval",
    "dashboard",
    "survival-analysis",
    "kaggle",
    "pandas",
    "numpy",
    "scipy",
    "matplotlib",
    "seaborn",
    "chartjs",
    "reproducible-research",
    "feature-engineering",
    "machine-learning",
    "portfolio-project",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "scipy>=1.10",
    "click>=8.0",
]

[project.optional-dependencies]
reports = ["fpdf2>=2.0", "python-docx>=1.0", "markdown>=3.5"]
dev = ["pytest>=7.0", "jupyter>=1.0", "ruff>=0.9.0", "pre-commit>=3.0"]
test = ["pytest>=7.0"]

[project.urls]
Homepage = "https://aneekhait.github.io"
Repository = "https://github.com/AneekHait/titanic-data-analysis"
Issues = "https://github.com/AneekHait/titanic-data-analysis/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
